<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_boards"
            android:checked="true"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/Boards_title" />
        <item
            android:id="@+id/nav_teams"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/Teams_title" />
        <item
            android:id="@+id/nav_cards"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/Tasks_title" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/About_tile" />
        </menu>
    </item>

</menu>
